--- a/src/main/resources/templates/personform.html
+++ b/src/main/resources/templates/personform.html
@@ -27,18 +27,32 @@
                     <input type="text" class="form-control" th:field="*{lastName}"/>
                 </div>
             </div>
-            <div class="form-group">
+            <!--div class="form-group">
                 <label class="col-sm-2 control-label">Street Address:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{streetAddress}"/>
+                </div>
+            </div-->
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Address:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{address.streetAddress}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">City:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{city}"/>
+                    <input type="text" class="form-control" th:field="*{address.city}"/>
                 </div>
             </div>
+
+
+            <!--div class="form-group">
+                <label class="col-sm-2 control-label">City:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{city}"/>
+                </div>
+            </div-->
             <div class="form-group">
                 <label class="col-sm-2 control-label">Social ID:</label>
                 <div class="col-sm-10">
