--- a/src/main/resources/templates/personshow.html
+++ b/src/main/resources/templates/personshow.html
@@ -33,13 +33,13 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Street Address:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${person.streetAddress}">Last name</p>
+                        <p class="form-control-static" th:text="${person.address?.streetAddress}">Street Address</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">City:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${person.city}">Last name</p>
+                        <p class="form-control-static" th:text="${person.address?.city}">Last name</p>
                     </div>
                 </div>
                 <div class="form-group">
