--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,6 +23,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="#" th:href="@{/person/new}">Create Person</a></li>
                         <li><a href="#" th:href="@{/persons}">Show Persons</a></li>
+                        <li><a href="#" th:href="@{/person/query}">Find Person</a></li>
                     </ul>
 
                 </div>
