--- a/src/main/resources/templates/personquery.html
+++ b/src/main/resources/templates/personquery.html
@@ -10,7 +10,7 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 
-    <h2>Person Details</h2>
+    <h2>Find By Social ID</h2>
     <div>
         <form class="form-horizontal" th:object="${person}" th:action="@{/person/find}" method="get">
 
