--- a/src/main/resources/templates/educationform.html
+++ b/src/main/resources/templates/educationform.html
@@ -10,23 +10,32 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 
+    <!-- how to get person.id form this form to controller? -->
+
     <h2>Person Details</h2>
     <div>
-        <form class="form-horizontal" th:object="${phone}" th:action="@{/phone}" method="post">
+        <form class="form-horizontal" th:object="${education}" th:action="@{/education}" method="post">
             <input type="hidden" th:field="*{id}"/>
 
             <div class="form-group">
-                <label class="col-sm-2 control-label">Phone Number:</label>
+                <label class="col-sm-2 control-label">Description:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{number}"/>
+                    <input type="text" class="form-control" th:field="*{description}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Type:</label>
+                <label class="col-sm-2 control-label">Date:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{type}"/>
+                    <input type="text" class="form-control" th:field="*{date}"/>
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Person ID:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{pid}"/>
+                </div>
+            </div>
+
 
             <div class="row">
                 <button type="submit" class="btn btn-default">Submit</button>
