--- a/src/main/resources/templates/personshow.html
+++ b/src/main/resources/templates/personshow.html
@@ -61,6 +61,22 @@
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Education:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${person.educations}">Educations</p>
+                    </div>
+                </div>
+
+                <div class="form-group" >
+                    <label class="col-sm-2 control-label">Education:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static">
+                            <a th:each="education : ${person.educations}"  th:text="${education.id}+'  '" th:href="'/educations' ">Id</a>
+                        </p>
+                    </div>
+                </div>
+
                 <div class="form-group" >
                     <label class="col-sm-2 control-label">Kids:</label>
                     <div class="col-sm-10">
