--- a/src/main/resources/templates/educationformedit.html
+++ b/src/main/resources/templates/educationformedit.html
@@ -15,9 +15,10 @@
     <h2>Education Details Edit</h2>
     <div>
         <form class="form-horizontal" th:object="${education}" th:action="@{/education} " method="post">
-            <!--input type="hidden" th:field="*{pid}"/-->
-            <input type="text" th:field="*{pid}"/>
-            <input type="text" th:field="*{id}"/>
+            <!--input type="text" th:field="*{pid}"/-->
+            <!--input type="text" th:field="*{id}"/-->
+            <input type="hidden" th:field="*{pid}"/>
+            <input type="hidden" th:field="*{id}"/>
 
             <div class="form-group">
                 <label class="col-sm-2 control-label">Description:</label>
