--- a/src/main/resources/templates/educations.html
+++ b/src/main/resources/templates/educations.html
@@ -14,27 +14,29 @@
         <table class="table table-striped">
             <tr>
                 <th>Id</th>
-                <th>Pid</th>
+                <!--th>Pid</th-->
                 <th>Description</th>
                 <th>Date</th>
-                <th>View</th>
+                <!--th>View</th-->
                 <th>Edit</th>
-                <th>New</th>
             </tr>
             <tr th:each="education : ${educations}">
                 <td th:text="${education.id}"><a href="/education/${education.id}">Id</a></td>
-                <td th:text="${education.pid}">Pid</td>
+                <!--td th:text="${education.pid}">Pid</td-->
                 <td th:text="${education.description}">Description</td>
                 <td th:text="${education.date}">Date</td>
-                <td><a th:href="${ '/education/' + education.id}">View</a></td>
+                <!--td><a th:href="${ '/education/' + education.id}">View</a></td-->
                 <td><a th:href="${'/education/edit/' + education.id} "  >Edit</a></td>
-                <td><a th:href="${'/education/new/' + education.person?.id} "  >New</a></td>
             </tr>
         </table>
-
-
-
+                  <a th:href="${'/education/new/' + pid} "  >Create New Education</a>
     </div>
+
+    <div th:if="${#lists.isEmpty(educations)}">
+          <a th:href="${'/education/new/' + pid} "  >Create New Education</a>
+    </div>
+    
+
 </div>
 
 </body>
