--- a/src/main/resources/templates/personshow.html
+++ b/src/main/resources/templates/personshow.html
@@ -65,7 +65,7 @@
                     <label class="col-sm-2 control-label">Education:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static">
-                            <a text="Show Educations" th:href="'/educations/' + ${person.id} ">Show Educations</a>
+                            <a text="Show Educations" th:href="'/educations/' + ${person.id} ">Educations</a>
                         </p>
                     </div>
                 </div>
