--- a/src/main/resources/templates/personform.html
+++ b/src/main/resources/templates/personform.html
@@ -27,12 +27,6 @@
                     <input type="text" class="form-control" th:field="*{lastName}"/>
                 </div>
             </div>
-            <!--div class="form-group">
-                <label class="col-sm-2 control-label">Street Address:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{streetAddress}"/>
-                </div>
-            </div-->
             <div class="form-group">
                 <label class="col-sm-2 control-label">Address:</label>
                 <div class="col-sm-10">
@@ -45,7 +39,6 @@
                     <input type="text" class="form-control" th:field="*{address.city}"/>
                 </div>
             </div>
-
             <div class="form-group">
                 <label class="col-sm-2 control-label">Social ID:</label>
                 <div class="col-sm-10">
@@ -61,7 +54,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Date Of Birth:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{dateOfBirth}" placeholder="dd/MM/yyyy"  />
+                    <input type="text" class="form-control" th:field="*{dateOfBirth}"   />
                 </div>
             </div>
             <div class="form-group">
@@ -76,7 +69,6 @@
                     <input type="text" class="form-control" th:field="*{parentFrom}"/>
                 </div>
             </div>
-
             <div class="row">
                 <button type="submit" class="btn btn-default">Submit</button>
             </div>
