--- a/src/main/resources/templates/personshow.html
+++ b/src/main/resources/templates/personshow.html
@@ -11,7 +11,7 @@
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 
     <h2>Person Details</h2>
-        <div>
+        <div th:if="${person.id != null}"   >
             <form class="form-horizontal">
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Person Id:</label>
@@ -86,6 +86,16 @@
                 </div>
             </form>
     </div>
+
+    <div th:if="${person.id == null}" >
+        <div class="form-group">
+            <label class="col-sm-2 control-label"></label>
+            <div class="col-sm-10">
+                <p class="form-control-static" th:text="'No Person found with Social ID:   '+${person.sotu}"></p>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 </body>
